Bug 1837483 - Add check for conduit before setting jitterBufferTarget.r=bwc

Differential Revision: https://phabricator.services.mozilla.com/D181001