dom/media/webrtc/jsapi/RTCRtpReceiver.cpp
@@ -542,20 +542,23 @@ void RTCRtpReceiver::SetJitterBufferTarget(
   // milliseconds and to throw RangeError if it is. If an invalid value is
   // received we return early to preserve the current JitterBufferTarget
   // internal slot and jitter buffer values.
-  if (!aTargetMs.IsNull() &&
-      (aTargetMs.Value() < 0.0 || aTargetMs.Value() > 4000.0)) {
-    aError.ThrowRangeError<MSG_VALUE_OUT_OF_RANGE>("jitterBufferTarget");
-    return;
-  }
+  if (mPipeline && mPipeline->mConduit) {
+    if (!aTargetMs.IsNull() &&
+        (aTargetMs.Value() < 0.0 || aTargetMs.Value() > 4000.0)) {
+      aError.ThrowRangeError<MSG_VALUE_OUT_OF_RANGE>("jitterBufferTarget");
+      return;
+    }
 
-  mJitterBufferTarget.reset();
+    mJitterBufferTarget.reset();
 
-  if (!aTargetMs.IsNull()) {
-    mJitterBufferTarget = Some(aTargetMs.Value());
+    if (!aTargetMs.IsNull()) {
+      mJitterBufferTarget = Some(aTargetMs.Value());
+    }
+    // If aJitterBufferTarget is null then we are resetting the jitter buffer so
+    // pass the default target of 0.0.
+    mPipeline->mConduit->SetJitterBufferTarget(
+        mJitterBufferTarget.valueOr(0.0));
   }
-  // If aJitterBufferTarget is null then we are resetting the jitter buffer so
-  // pass the default target of 0.0.
-  mPipeline->mConduit->SetJitterBufferTarget(mJitterBufferTarget.valueOr(0.0));
 }
 
 void RTCRtpReceiver::GetContributingSources(
